[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dandidav"
version = "0.0.0"
description = "WebDAV view to DANDI Archive"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "DANDI Developers", email = "team@dandiarchive.org" }
]
maintainers = [
    { name = "John Thorvald Wodder II", email = "dandidav@varonathe.org" }
]

classifiers = ["Private :: Keep Off PyPI"]

dependencies = [
    "boto3",
    "botocore",
    "cheroot",
    "dandi >= 0.58.2",
    "fsspec[http]",
    "ruamel.yaml",
    "wsgidav ~= 4.3",
]

[project.scripts]
dandidav = "dandidav.__main__:main"

[project.urls]
"Source Code" = "https://github.com/dandi/dandi-webdav"
"Bug Tracker" = "https://github.com/dandi/dandi-webdav/issues"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "dandi.*",
    # <https://github.com/fsspec/filesystem_spec/issues/625>
    "fsspec.*",
    "wsgidav.*",
]
ignore_missing_imports = true
